@@ -1,7 +1,7 @@
 package com.example.apigateway.config;
 
-
-import org.springframework.core.convert.converter.Converter;
+import com.example.apigateway.core.helpers.ObjectHelper;
+import com.example.apigateway.core.interfaces.AuthenticationConverter;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
@@ -16,7 +16,7 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 @Component
-public class CustomJwtAuthenticationConverter implements Converter<Jwt, Mono<AbstractAuthenticationToken>> {
+public class CustomJwtAuthenticationConverter implements AuthenticationConverter {
 
     @Override
     @SuppressWarnings("unchecked")
@@ -28,21 +28,21 @@ public class CustomJwtAuthenticationConverter implements Converter<Jwt, Mono<Abs
     private Collection<GrantedAuthority> extractAuthorities(Jwt jwt) {
         List<String> permissions = new ArrayList<>();
 
-        if (jwt.getClaim("permissions") != null) {
+        if (!ObjectHelper.isNull(jwt.getClaim("permissions"))) {
             permissions.addAll(jwt.getClaimAsStringList("permissions"));
         }
 
-        if (jwt.getClaim("scope") != null) {
+        if (!ObjectHelper.isNull(jwt.getClaim("scope"))) {
             permissions.addAll(jwt.getClaimAsStringList("scope"));
         }
 
-        if (jwt.getClaim("realm_access") != null) {
+        if (!ObjectHelper.isNull(jwt.getClaim("realm_access"))) {
             Map<String, Object> realmAccess = jwt.getClaim("realm_access");
             if (realmAccess.containsKey("roles")) {
                 List<String> roles = (List<String>) realmAccess.get("roles");
                 permissions.addAll(roles.stream()
                         .map(role -> "ROLE_" + role.toUpperCase())
-                        .collect(Collectors.toList()));
+                        .toList());
             }
         }
 
